Added back button to detail view and cleaned up slightly

--- a/static/styles.css
+++ b/static/styles.css
@@ -222,3 +222,13 @@ i:hover{
 .step-links a{
   color: rgb(4, 105, 21);
 }
+
+/* action buttons for sessions/tasks */
+
+.table-button{
+  margin-bottom: 0;
+}
+
+.button-form{
+  padding: 1px;
+}
