--- a/usersessions/templates/usersessions/tasks.html
+++ b/usersessions/templates/usersessions/tasks.html
@@ -18,7 +18,7 @@
                 
             <div>
                 <div class="card p-2">
-                    <table class="table-sm">
+                    <table class="table-sm table-hover">
                         <thead class="">
                         <tr >
                             <th scope="col">Task Name</th>
@@ -41,14 +41,14 @@
                                     <td>
                                         <div class="container">
                                             <div class="row">
-                                                <div class="col">
+                                                <div class="col button-form">
                                                     <form action="/task_detail" method="GET">
-                                                        <button class="btn btn-outline-secondary btn-sm"  name="action" value={{ task.task_name }}>Details</button>
+                                                        <button class="btn btn-block btn-outline-secondary btn-sm"  name="action" value={{ task.task_name }}>Details</button>
                                                     </form>
                                                 </div>
-                                                <div class="col">
+                                                <div class="col button-form">
                                                     <form action="." method="POST"> {% csrf_token %}
-                                                        <button class="btn btn-outline-secondary btn-sm" name="delete" value={{ task.task_name }}>Delete</button>
+                                                        <button class="btn btn-block btn-outline-secondary btn-sm" name="delete" value={{ task.task_name }}>Delete</button>
                                                     </form>  
                                                 </div>
                                             </div>
@@ -59,8 +59,8 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
-        
+            </div>                   
+
             <div class=" mt-2">
                 <div class="pagination justify-content-start">
                     <span class="step-links">
@@ -81,7 +81,6 @@
                 </div>
             </div>
         </div>
-        
     
         <div class="col-md-1"></div>
     </div>
