removed bt-info

--- a/usersessions/templates/usersessions/session_detail.html
+++ b/usersessions/templates/usersessions/session_detail.html
@@ -15,7 +15,7 @@
                         Start Time: {{ session.session_time_start }} <br>
                         End Time: {{ session.session_time_end }} <br>
                         Description: {{ session.description }} <br>
-                        <a href="/sessions" class="btn btn-info btn-search" role="button">Back to Sessions</a>
+                        <a href="/sessions" class="btn btn-search" role="button">Back to Sessions</a>
                     </div>
                 </div>
             </div>
