--- a/usersessions/templates/usersessions/task_detail.html
+++ b/usersessions/templates/usersessions/task_detail.html
@@ -16,7 +16,7 @@
                         End Time: {{ task.time_end }} <br>
                         Task Time: {{ task.task_time }} min <br>
                         Category: {{ task.category }} <br>
-                        <a href="/tasks" class="btn btn-info btn-search" role="button">Back to Tasks</a>
+                        <a href="/tasks" class="btn btn-search" role="button">Back to Tasks</a>
                     </div>
                 </div>
             </div>
