--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -6,15 +6,15 @@
     <script src="../../static/js/profile.js" type="text/javascript"></script>
     <div class="container-fluid">
         <div class="row mt-4 p-4 justify-content-center">
-            <div class="container col-12 col-md-8 mb-5">
+            <div class="container col-12 col-md-7 col-lg-8 col-xl-9">
                 <div class="card text-center col-12">
                     <div class="card-title pt-3"><h2>Garden</h2></div>
                     <div class="card-group garden">
                         <div class="card text-center border-0" id="plant1">
                             <img src="" id="plant-image1" alt="plant-1" class="mx-auto mt-auto">
                             <script>getPlantImage(1, {{ user.userprofile.plant1_stage }});</script>
-                            <div class="card-footer border-0 m-0 p-0">
-                                <button id="plant-button1" type="button" class="btn btn-success" data-catid="1">
+                            <div class="border-0 m-0 p-0 w-100">
+                                <button id="plant-button1" type="button" class="btn btn-search" data-catid="1">
                                     <script type="text/javascript">
 
                                         $('#plant-button1').click(function () {
@@ -47,8 +47,8 @@
                         <div class="col-sm card text-center border-0" id="plant2">
                             <img src="" id="plant-image2" alt="plant-2" class="mx-auto mt-auto">
                             <script>getPlantImage(2, {{ user.userprofile.plant2_stage }});</script>
-                            <div class="card-footer border-0 m-0 p-0">
-                                <button id="plant-button2" type="button" class="btn btn-success" data-catid="2">
+                            <div class="border-0 m-0 p-0">
+                                <button id="plant-button2" type="button" class="btn btn-search" data-catid="2">
                                     <script type="text/javascript">
                                         $('#plant-button2').click(function () {
                                             let id;
@@ -80,8 +80,8 @@
                         <div class="col-sm card text-center border-0" id="plant3">
                             <img src="" id="plant-image3" alt="plant-3" class="mx-auto mt-auto">
                             <script>getPlantImage(3, {{ user.userprofile.plant3_stage }});</script>
-                            <div class="card-footer button border-0 m-0 p-0">
-                                <button id="plant-button3" type="button" class="btn btn-success" data-catid="3">
+                            <div class="button border-0 m-0 p-0">
+                                <button id="plant-button3" type="button" class="btn btn-search" data-catid="3">
                                     <script type="text/javascript">
                                         $('#plant-button3').click(function () {
                                             let id;
@@ -114,7 +114,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-5 col-lg-4 col-xl-3 profile-information">
                 <div class="card text-center p-3">
                     <img class="mx-auto" style="width: 40px" src="../../../static/images/tomatoheader.png" alt="tomato">
                     <h1>Profile</h1>
@@ -136,7 +136,7 @@
 
                     <div class="mt-3 d-flex justify-content-around">
                         {% buttons %}
-                            <a class="btn-submit btn " href="{% url 'index' %}">Return To Timer</a>
+                            <a class="btn-search btn " href="{% url 'index' %}">Return To Timer</a>
                         {% endbuttons %}
                     </div>
 
@@ -146,8 +146,8 @@
     </div>
 
     <div class="container-fluid">
-        <div class="row mt-4 p-4">
-            <div class="col-md-8">
+        <div class="row p-4">
+            <div class="col-12 col-md-7 col-lg-8 col-xl-9">
                 <div class="card text-center col-12">
                     <div class="card-title pt-3"><h2>Dinner Table</h2></div>
                     <div class="card-group">
