--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -5,8 +5,8 @@
 {% block body %}
     <script src="../../static/js/profile.js" type="text/javascript"></script>
     <div class="container-fluid">
-        <div class="row mt-4 p-4 justify-content-center">
-            <div class="container col-12 col-md-7 col-lg-8 col-xl-9">
+        <div class="row p-4 justify-content-center sm-column-reverse">
+            <div class="container col-12 col-md-7 col-lg-8 col-xl-9 garden-section">
                 <div class="card text-center col-12">
                     <div class="card-title pt-3"><h2>Garden</h2></div>
                     <div class="card-group garden">
@@ -147,7 +147,7 @@
 
     <div class="container-fluid">
         <div class="row p-4">
-            <div class="col-12 col-md-7 col-lg-8 col-xl-9">
+            <div class="col-12 col-md-12 col-lg-8 col-xl-9">
                 <div class="card text-center col-12">
                     <div class="card-title pt-3"><h2>Dinner Table</h2></div>
                     <div class="card-group">
