--- a/static/styles.css
+++ b/static/styles.css
@@ -286,7 +286,14 @@ b {
 }
 
 @media only screen and (max-width: 767px) {
-    .profile-information {
+  .sm-column-reverse {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+    .garden-section {
         margin-top: 50px;
+    }
+    .profile-information {
+        margin-top: 30px;
     }
 }
