--- a/timer/templates/index.html
+++ b/timer/templates/index.html
@@ -14,7 +14,7 @@
 
             </div>
             <div class="col-12 col-md-8 d-flex justify-content-center">
-                <div class="card p-5 mt-4">
+                <div class="card p-3 p-md-5 mt-4">
                     <div class="d-flex justify-content-center">
                        
                             <button type="button" id="pomodoroModeButton"  value="{{ user.userprofile.task_length }}">Pomodoro</button>
