--- a/usersessions/templates/usersessions/task_detail.html
+++ b/usersessions/templates/usersessions/task_detail.html
@@ -9,15 +9,15 @@
         <div class="col-12 col-md-10">
                 
             <div class="d-flex justify-content-center mt-4">
-                <div class="card p-2">
+                <div class="card p-4">
                     <div>
                         <h2>{{ task.task_name }}</h1>
-                        Start Time: {{ task.time_start }} <br>
-                        End Time: {{ task.time_end }} <br>
-                        Task Time: {{ task.task_time }} min <br>
-                        Category: {{ task.category }} <br>
-                        <a href="/tasks" class="btn btn-search" role="button">Back to Tasks</a>
+                        <p><b>Start Time:</b> {{ task.time_start }} <br>
+                        <b>End Time:</b> {{ task.time_end }} <br>
+                        <b>Task Time:</b> {{ task.task_time }} min <br>
+                        <b>Category:</b> {{ task.category }} <br></p>
                     </div>
+                    <a href="/tasks" class="btn btn-search" role="button">Back to Tasks</a>
                 </div>
             </div>
         </div>
