--- a/usersessions/templates/usersessions/session_detail.html
+++ b/usersessions/templates/usersessions/session_detail.html
@@ -12,8 +12,13 @@
                 <div class="card p-4">
                     <div>
                         <h2>{{ session.session_name }}</h2>
-                        <p><b>Start Time:</b> {{ session.session_time_start|date:"SHORT_DATE_FORMAT" }} {{ session.session_time_start|time:"G:i" }} <br>
-                        <b>End Time:</b> {{ session.session_time_end }} <br>
+                        <p><b>Start Time:</b> {{ session.session_time_start|date:"n-j-y" }}, {{ session.session_time_start|time:"G:i" }} <br>
+                        <b>End Time:</b>
+                            {% if session.session_time_end %}
+                                {{ session.session_time_end|date:"n-j-y" }}, {{ session.session_time_end|time:"G:i" }}
+                            {% else %}
+                                -
+                            {% endif %}<br>
                         <b>Description:</b> {{ session.description }} <br></p>
 
                     </div>
@@ -32,7 +37,7 @@
                             {% for task in tasks %}
                                 <tr>
                                     <td class="pr-4" >{{ task.task_name }}</td>
-                                    <td class="pr-4">{{ task.time_start|date:"n-j-y" }}, {{ task.time_start|time:"g:i a" }}</td>                
+                                    <td class="pr-4">{{ task.time_start|date:"n-j-y" }}, {{ task.time_start|time:"G:i" }}</td>                
                                     <td class="pr-4">{{ task.task_time }}</td>
                                     <td>{{ task.category }}</td>
                                 </tr>
