--- a/usersessions/templates/usersessions/task_detail.html
+++ b/usersessions/templates/usersessions/task_detail.html
@@ -12,8 +12,13 @@
                 <div class="card p-4">
                     <div>
                         <h2>{{ task.task_name }}</h1>
-                        <p><b>Start Time:</b> {{ task.time_start }} <br>
-                        <b>End Time:</b> {{ task.time_end }} <br>
+                        <p><b>Start Time:</b> {{ task.time_start|date:"n-j-y" }}, {{ task.time_start|time:"G:i" }} <br>
+                        <b>End Time:</b> 
+                            {% if time_end %}
+                                {{ task.time_end|date:"n-j-y" }}, {{ task.time_end|time:"G:i" }}
+                            {% else %}
+                                -
+                            {% endif %}<br>
                         <b>Task Time:</b> {{ task.task_time }} min <br>
                         <b>Category:</b> {{ task.category }} <br></p>
                     </div>
