--- a/usersessions/templates/usersessions/tasks.html
+++ b/usersessions/templates/usersessions/tasks.html
@@ -34,7 +34,7 @@
                             {% for task in tasks_page %}
                                 <tr>
                                     <td >{{ task.task_name }}</td>
-                                    <td>{{ task.first_time_start|date:"n-j-y" }}, {{ task.first_time_start|time:"g:i a" }}</td>                
+                                    <td>{{ task.first_time_start|date:"n-j-y" }}, {{ task.first_time_start|time:"G:i" }}</td>
                                     <td>{{ task.total_task_time }} min</td>
                                     <td>{{ task.sessions_count }}</td>
                                     <td>{{ task.category }}</td>
