--- a/usersessions/templates/usersessions/task_detail.html
+++ b/usersessions/templates/usersessions/task_detail.html
@@ -11,17 +11,37 @@
             <div class="d-flex justify-content-center mt-4">
                 <div class="card p-4">
                     <div>
-                        <h2>{{ task.task_name }}</h1>
-                        <p><b>Start Time:</b> {{ task.time_start|date:"n-j-y" }}, {{ task.time_start|time:"G:i" }} <br>
+                        <h2>{{ gen_task.task_name }}</h1>
+                        <p><b>Start Time:</b> {{ gen_task.time_start|date:"n-j-y" }}, {{ gen_task.time_start|time:"G:i" }} <br>
                         <b>End Time:</b> 
-                            {% if time_end %}
-                                {{ task.time_end|date:"n-j-y" }}, {{ task.time_end|time:"G:i" }}
+                            {% if gen_task.time_end %}
+                                {{ gen_task.time_end|date:"n-j-y" }}, {{ gen_task.time_end|time:"G:i" }}
                             {% else %}
                                 -
                             {% endif %}<br>
-                        <b>Task Time:</b> {{ task.task_time }} min <br>
-                        <b>Category:</b> {{ task.category }} <br></p>
+                        <b>Category:</b> {{ gen_task.category }} <br></p>
                     </div>
+
+                    <table class="table-sm table-hover mb-4">
+                        <h4>Tasks</h4>
+                        <thead class="">
+                            <tr >
+                                <th class="pr-4" scope="col">Session</th>
+                                <th class="pr-4" scope="col">Time Started</th>
+                                <th class="pr-4" scope="col">Time</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for task in subtasks %}
+                                <tr>
+                                    <td class="pr-4" >{{ task.usersession.session_name }}</td>
+                                    <td class="pr-4">{{ task.time_start|date:"n-j-y" }}, {{ task.time_start|time:"G:i" }}</td>                
+                                    <td class="pr-4">{{ task.task_time }} min</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+
                     <a href="/tasks" class="btn btn-search" role="button">Back to Tasks</a>
                 </div>
             </div>
